--- a/frontend/src/metabase/css/core/colors.css
+++ b/frontend/src/metabase/css/core/colors.css
@@ -2,7 +2,7 @@
  * NOTE: KEEP SYNCRONIZED WITH COLORS.JS
  */
 :root {
-  --color-brand: #509ee3;
+  --color-brand: #2e3c47;
   --color-accent1: #9cc177;
   --color-accent2: #a989c5;
   --color-accent3: #ef8c8c;
@@ -10,7 +10,7 @@
   --color-accent5: #f2a86f;
   --color-accent6: #98d9d9;
   --color-accent7: #7172ad;
-  --color-admin-navbar: #7172ad;
+  --color-admin-navbar: #2e3c47;
   --color-white: #ffffff;
   --color-black: #2e353b;
   --color-success: #84bb4c;
